--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "tslint src/**/*.ts --fix",
     "lint:ci": "tslint src/**/*.ts",
     "test": "jest --watch",
-    "test:ci": "jest --coverage",
+    "test:ci": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "e2e": "echo Not yet implemented"
   },
   "repository": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rabelloo/resume#readme",
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.2",
