--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rabelloo/resume#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.2",
     "coveralls": "^3.0.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
