--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "tslint src/**/*.ts --fix",
     "lint:ci": "tslint src/**/*.ts",
     "test": "jest --watch",
-    "test:ci": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "e2e": "echo Not yet implemented"
+    "test:ci": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -23,20 +22,21 @@
   },
   "homepage": "https://github.com/rabelloo/resume#readme",
   "devDependencies": {
+    "@types/jest": "^24.0.12",
     "copy-webpack-plugin": "^4.6.0",
-    "coveralls": "^3.0.2",
-    "css-loader": "^1.0.0",
+    "coveralls": "^3.0.3",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.4.2",
-    "node-sass": "^4.9.2",
+    "jest": "^24.7.1",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "ts-jest": "^23.1.2",
-    "ts-loader": "^4.4.2",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^4.5.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
     "webpack-serve": "^2.0.3"
   }
 }
