--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "10.7"
+  - node
 
 branches:
   only:
@@ -8,7 +8,7 @@ branches:
 
 cache:
   directories:
-     - node_modules
+    - node_modules
 
 sudo: required
 dist: trusty
@@ -19,7 +19,7 @@ install:
   - npm ci
 
 before_script:
-  - npm run lint:ci
+  - npm run lint
   - npm run test:ci
 
 script:
