--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "webpack --mode production --devtool source-map",
     "start": "webpack-serve",
-    "lint": "tslint src/**/*.ts --fix",
-    "lint:ci": "tslint src/**/*.ts",
+    "lint": "tslint src/**/*.ts",
     "test": "jest --watch",
     "test:ci": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
@@ -22,21 +21,21 @@
   },
   "homepage": "https://github.com/rabelloo/resume#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "copy-webpack-plugin": "^5.0.4",
-    "coveralls": "^3.0.6",
-    "css-loader": "^3.2.0",
+    "@types/jest": "^24.0.25",
+    "copy-webpack-plugin": "^5.1.1",
+    "coveralls": "^3.0.9",
+    "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.24.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.1.2",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
+    "style-loader": "^1.1.2",
+    "ts-jest": "^24.2.0",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "webpack-serve": "^2.0.3"
   }
 }
