--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,4 @@
 {
-  "$schema": "http://json.schemastore.org/prettierrc",
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "printWidth": 80,
-  "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "useTabs": false
+  "trailingComma": "es5"
 }
