--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
 
 deploy:
   - provider: firebase
+    skip_cleanup: true
     token: $FIREBASE_TOKEN # Set in travis-ci.org dashboard
 
 notifications:
