--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
 
 before_script:
   - npm run lint
-  - npx jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - npm run test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 script:
   - npm run build
