--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
   "homepage": "https://github.com/rabelloo/resume#readme",
   "private": true,
   "scripts": {
-    "start": "webpack-serve",
+    "start": "webpack serve --open",
     "build": "webpack --mode production --devtool source-map",
     "prebuild": "rm -rf dist",
     "lint": "tslint -p tsconfig.json",
     "test": "jest --coverage"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.13",
-    "copy-webpack-plugin": "^6.1.0",
-    "css-loader": "^4.2.2",
-    "html-webpack-plugin": "^4.4.1",
-    "jest": "^26.4.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "ts-jest": "^26.3.0",
-    "ts-loader": "^8.0.3",
+    "@types/jest": "^26.0.23",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.4",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.2.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-serve": "^3.2.0"
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
