--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,10 +2,9 @@ name: check
 
 on:
   push:
-    branches: [$default-branch]
+    branches: [main]
   pull_request:
-    branches: [$default-branch]
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
   prettier:
