--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,7 @@ name: build
 
 on:
   push:
-    branches: [$default-branch]
-  workflow_dispatch:
+    branches: [main]
 
 permissions:
   contents: read
